# jaunt

./: .gitignore  CLAUDE.md  DOCS.md  IMPROVEMENTS.md  LICENSE  README.md  TASK-000-MVP-PLAN.md  TASK-010-MULTI-PROVIDER.md  TASK-010-RUNTIME-REGISTRY.md  TASK-020-CONFIG-HEADER-PATHS.md  TASK-020-DEPENDENCY-CONTEXT.md  TASK-030-DEPS-DIGESTS.md  TASK-030-JSON-OUTPUT.md  TASK-040-CONFIG-RUNTIME.md  TASK-040-GENERATION-BACKENDS.md  TASK-050-AGENT-SKILLS.md  TASK-050-BUILD_TEST_ORCHESTRATION.md  TASK-060-CLI-ERGONOMICS.md  TASK-060-CLI.md  TASK-070-PROMPT-QUALITY.md  TASK-070-SKILL-DOCS.md  TASK-080-ERROR-MESSAGES.md  TASK-090-PACKAGE.md  TASK-100-WATCH-MODE.md  TASK-110-MCP-SERVER.md  TASK-120-STRUCTURED-OUTPUT.md  TASK-130-CACHING.md  TASK-140-EVAL-SUITE.md  jaunt_tdd_plan.md  pyproject.toml
.codex/skills/aider/: SKILL.md
.codex/skills/fastmcp-mcp-server/: SKILL.md
.codex/skills/fumadocs-docs/: SKILL.md
.codex/skills/jaunt/: SKILL.md
.codex/skills/openai-advanced-agents/: SKILL.md
.codex/skills/openai-gpt5-prompting/: SKILL.md
.codex/skills/uv-python/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
AGENT_PROMPTS/: PROMPT-010A-FOUNDATIONS-ERRORS-SPECREF.md  PROMPT-010B-REGISTRY.md  PROMPT-010C-RUNTIME-DECORATORS.md  PROMPT-015-PUBLIC-API-EXPORTS.md  PROMPT-020-CONFIG-HEADER-PATHS.md  PROMPT-025-DISCOVERY.md  PROMPT-030-DEPS-DIGESTS.md  PROMPT-040-GENERATION-CORE.md  PROMPT-041-OPENAI-BACKEND.md  PROMPT-050-BUILD-TEST-ORCHESTRATION.md  PROMPT-060-CLI.md  PROMPT-070-SKILL-DOCS.md  PROMPT-080-INTEGRATION-TESTS.md  PROMPT-090-PACKAGING-DEPS.md  README.md  STATUS.md  jaunt-docs-revamp-plan.md
docs-site/: package-lock.json  package.json
docs-site/app/: layout.tsx
docs-site/app/(home)/: page.tsx
docs-site/components/ai/: page-actions.tsx
docs-site/content/docs/: getting-started.mdx  how-it-works.mdx  index.mdx  meta.json  quickstart.mdx
docs-site/lib/: layout.shared.tsx
examples/: README.md  _dotenv.py  demo_on_the_fly.py  run_example.py
examples/01_slugify/tests/: specs.py
examples/02_lru_cache/tests/: specs.py
examples/03_dice_roller/tests/: specs.py
examples/04_pydantic_validation/tests/: specs.py
examples/05_task_board/tests/: specs.py
examples/csv_parser/: README.md
examples/csv_parser/tests/: __init__.py
examples/diff_engine/tests/: specs.py
examples/expr_eval/: jaunt.toml
examples/expr_eval/tests/: specs.py
examples/jwt_auth/: README.md  jaunt.toml
examples/jwt_auth/tests/: specs.py
examples/markdown_render/: README.md
examples/rate_limiter/: README.md
examples/rich_tictactoe/: README.md  jaunt.toml
examples/toy_app/: .gitignore  README.md  jaunt.toml
jaunt-examples/: README.md  _dotenv.py  run_example.py
jaunt-examples/csv_parser/: README.md
jaunt-examples/jwt_auth/: README.md
jaunt-examples/markdown_render/: README.md
jaunt-examples/rate_limiter/: README.md  jaunt.toml
src/jaunt/: __init__.py  agent_runtime.py  aider_executor.py  builder.py  cache.py  cli.py  config.py  decorator_analysis.py  deps.py  diagnostics.py  digest.py  discovery.py  dotenv.py  errors.py  eval.py  eval_agent_cases.py  external_imports.py  generation_fingerprint.py  header.py  lib_inspect.py  mcp_server.py  module_contract.py  parse_cache.py  paths.py  progress.py  pypi.py  registry.py  runtime.py  skill_agent.py  skill_builder.py  skill_manager.py  skillgen.py  skills_auto.py  spec_ref.py  tester.py  validation.py  watcher.py
tests/: test_aider_backend.py  test_anthropic_backend.py  test_basic.py  test_build_scheduler.py  test_builder_dep_context.py  test_builder_io.py  test_cache.py  test_cerebras_backend.py  test_cli.py  test_cli_clean.py  test_cli_eval.py  test_cli_init.py  test_cli_json_mode.py  test_cli_provider_dispatch.py  test_cli_pythonpath_for_pytest.py  test_cli_skill.py  test_cli_status.py  test_cli_sync_env.py  test_cli_test_dependency_apis.py  test_cli_test_discovery_prefix.py  test_cli_watch.py  test_config.py  test_deps.py  test_diagnostics.py  test_digest.py  test_discovery.py  test_dotenv.py  test_errors.py  test_eval.py  test_generate_retry.py  test_header.py  test_integration.py  test_lib_inspect.py  test_magic_decorator.py  test_mcp_server.py  test_module_contract.py  test_openai_backend.py  test_openai_retry.py  test_paths.py  test_progress.py  (+15 more)
tests/snapshots/: test_prompt_snapshots.ambr
(+101 files in other folders)
