[project]
name = "jaunt"
version = "0.2.0"
description = "Spec-driven code generation framework: write intent as decorated Python stubs, generate implementations and tests with LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.0.0,<2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0,<1"]
watch = ["watchfiles>=1.0.0"]
all = ["anthropic>=0.39.0,<1", "watchfiles>=1.0.0"]

[project.scripts]
jaunt = "jaunt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaunt"]
include = [
  "src/jaunt/py.typed",
  "src/jaunt/prompts/**",
  "src/jaunt/skill/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/jaunt/py.typed",
  "src/jaunt/prompts/**",
  "src/jaunt/skill/**",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.9",
  "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["examples/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.src]
exclude = ["examples/**"]
