[project]
name = "jaunt"
version = "0.3.4"
description = "Spec-driven code generation framework: write intent as decorated Python stubs, generate implementations and tests with LLMs."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["llm", "code-generation", "testing", "developer-tools", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/creatorrr/jaunt"
Repository = "https://github.com/creatorrr/jaunt"
Issues = "https://github.com/creatorrr/jaunt/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0,<2"]
anthropic = ["anthropic>=0.39.0,<1"]
cerebras = ["cerebras-cloud-sdk>=1.0.0"]
watch = ["watchfiles>=1.0.0"]
mcp = ["fastmcp>=2.0.0"]
anyio = ["anyio>=4.1"]
async = ["pytest-asyncio>=1.0"]
all = ["openai>=1.0.0,<2", "anthropic>=0.39.0,<1", "cerebras-cloud-sdk>=1.0.0", "watchfiles>=1.0.0", "fastmcp>=2.0.0", "anyio>=4.1", "pytest-asyncio>=1.0"]

[project.scripts]
jaunt = "jaunt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaunt"]

[tool.hatch.build.targets.sdist]
include = ["src/jaunt/"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=1.0",
  "syrupy>=4.8.0",
  "ruff>=0.9",
  "ty",
  "openai>=1.0.0,<2",
  "cerebras-cloud-sdk>=1.0.0",
  "fastmcp>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["examples/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.src]
exclude = ["examples/**"]
